--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - aspnet_linux_edition</title>
+    <title>@ViewData["Title"] | ASPNET CORE</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-page="/Index" class="navbar-brand">aspnet_linux_edition</a>
+                <a asp-page="/Index" class="navbar-brand">ASPNET Linux Edition</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
